--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8090
 #数据源
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/webCar?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url = jdbc:mysql://localhost:3306/car?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username = root
 spring.datasource.password = 12345678
 #中指定POJO扫描包来让mybatis自动扫描到自定义POJO
