--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 server.port=8090
 #数据源
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/car?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url = jdbc:mysql://127.0.0.1:3306/highcar?serverTimezone=GMT%2B8& useUnicode=true&characterEncoding=utf-8
 spring.datasource.username = root
-spring.datasource.password = 12345678
+spring.datasource.password = root
 #中指定POJO扫描包来让mybatis自动扫描到自定义POJO
 mybatis.type-aliases-package=com.highcar.demo.pojo
 #Mapper.xml位置
-mybatis.mapper-locations=classpath*:resources/mapper/*.xml
+mybatis.mapper-locations=classpath*:mybatis/*.xml
+#下划线转驼峰
+mybatis.configuration.map-underscore-to-camel-case=true
+#打印myBatis的sql语句
+logging.level.com.highcar.demo.mapper=debug
