--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8090
 #数据源
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://192.168.0.104:3306/highcar?serverTimezone=GMT%2B8& useUnicode=true&characterEncoding=utf-8
-spring.datasource.username = root
+spring.datasource.url = jdbc:mysql://localhost:3306/highcar?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone = GMT
+spring.datasource.username= root
 spring.datasource.password = root
 #中指定POJO扫描包来让mybatis自动扫描到自定义POJO
 mybatis.type-aliases-package=com.highcar.demo.pojo
